--- a/app/src/main/res/drawable/ic_arrow_back_left.xml
+++ b/app/src/main/res/drawable/ic_arrow_back_left.xml
@@ -1,17 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="20dp"
-    android:viewportWidth="20"
-    android:viewportHeight="20">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M9.325,6.617L7.142,8.8C6.5,9.442 6.5,10.492 7.142,11.133L12.575,16.567"
+      android:pathData="M9.57,5.93L3.5,12L9.57,18.07"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:strokeColor="#292D32"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M12.575,3.367L11.708,4.233"
+      android:pathData="M20.5,12H3.67"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
